--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Home District  : Nilphamari
                         <div class="experience-header bg-dark h-100 pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                                 <p class="text-white sub-title">Experience</p>
-                                <h1 class="display-6 text-white mb-0"> Work & Research Experience</h1>
+                                <h1 class="display-6 text-white mb-0">Experience</h1>
                             </div>
                         </div>
                     </div>
@@ -330,10 +330,10 @@ Conduct literature reviews and data analysis
                                     <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
                                         <div class="text-primary text-center mb-3"><span class="fab fa-wordpress fa-3x"></span></div>
                                         <div class="counter-counting d-flex justify-content-center">
-                                            <h4 class="display-6" data-toggle="counter-up">98</h4>
+                                            <h4 class="display-6" data-toggle="counter-up">100</h4>
                                             <h4 class="display-6">%</h4>
                                         </div>
-                                        <p class="mb-0">WordPress</p>
+                                        <p class="mb-0">Microsoft Office</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-4 col-xl-3">
@@ -343,7 +343,7 @@ Conduct literature reviews and data analysis
                                             <h4 class="display-6" data-toggle="counter-up">95</h4>
                                             <h4 class="display-6">%</h4>
                                         </div>
-                                        <p class="mb-0">Figma</p>
+                                        <p class="mb-0">Mendeley</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-4 col-xl-3">
@@ -353,7 +353,7 @@ Conduct literature reviews and data analysis
                                             <h4 class="display-6" data-toggle="counter-up">87</h4>
                                             <h4 class="display-6">%</h4>
                                         </div>
-                                        <p class="mb-0">Sketch</p>
+                                        <p class="mb-0">Kobo Toolbox</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-4 col-xl-3">
@@ -363,7 +363,7 @@ Conduct literature reviews and data analysis
                                             <h4 class="display-6" data-toggle="counter-up">75</h4>
                                             <h4 class="display-6">%</h4>
                                         </div>
-                                        <p class="mb-0">Elementor</p>
+                                        <p class="mb-0">Endnote</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-4 col-xl-3">
@@ -373,7 +373,7 @@ Conduct literature reviews and data analysis
                                             <h4 class="display-6" data-toggle="counter-up">67</h4>
                                             <h4 class="display-6">%</h4>
                                         </div>
-                                        <p class="mb-0">JavaScript</p>
+                                        <p class="mb-0">SPSS</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-4 col-xl-3">
@@ -383,7 +383,7 @@ Conduct literature reviews and data analysis
                                             <h4 class="display-6" data-toggle="counter-up">98</h4>
                                             <h4 class="display-6">%</h4>
                                         </div>
-                                        <p class="mb-0">HTML & CSS</p>
+                                        <p class="mb-0">Nvivo</p>
                                     </div>
                                 </div>
                             </div>
@@ -402,8 +402,8 @@ Conduct literature reviews and data analysis
                     <div class="col-lg-3">
                         <div class="service-header h-100 bg-dark pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
-                                <p class="text-white sub-title">My Services</p>
-                                <h1 class="display-6 text-white mb-0">What I do for you</h1>
+                                <p class="text-white sub-title">My Achievement</p>
+                                <h1 class="display-6 text-white mb-0">Publications</h1>
                             </div>
                         </div>
                     </div>
@@ -417,16 +417,16 @@ Conduct literature reviews and data analysis
                                                 <i class="fas fa-bezier-curve fa-3x"></i>
                                             </div>
                                             <div class="col-xl-3">
-                                                <a href="#" class="h4 mb-0">Creative Design</a>
+                                                <a href="#" class="h4 mb-0">Original Article</a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laboriosam repudiandae
+                                                <p class="mb-0">SLEEPING PATTERNS AND ONLINE GAMING HABITS: UNRAVELLING THEIR INFLUENCE ON ANGER TOLERANCE AMONG UNIVERSITY STUDENTS
                                                 </p>
                                             </div>
                                             <div class="col-xl-3">
-                                                <p><i class="fa fa-check me-2"></i> UI/UX Design</p>
-                                                <p><i class="fa fa-check me-2"></i> Research</p>
-                                                <p class="mb-0"><i class="fa fa-check me-2"></i> Mobile App</p>
+                                                <p><i class="fa fa-check me-2"></i> Abstract</p>
+                                                <p><i class="fa fa-check me-2"></i> Download</p>
+                                                <p class="mb-0"><i class="fa fa-check me-2"></i> Cite</p>
                                             </div>
                                         </div>
                                     </div>
@@ -438,16 +438,16 @@ Conduct literature reviews and data analysis
                                                 <i class="fas fa-laptop-code fa-3x"></i>
                                             </div>
                                             <div class="col-xl-3">
-                                                <a href="#" class="h4 mb-0">Web Developm</a>
+                                                <a href="#" class="h4 mb-0">Review Article</a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laboriosam repudiandae
+                                                <p class="mb-0">Common mental health problems among different populations in Bangladesh– A systematic review
                                                 </p>
                                             </div>
                                             <div class="col-xl-3">
-                                                <p><i class="fa fa-check me-2"></i> UI/UX Design</p>
-                                                <p><i class="fa fa-check me-2"></i> Research</p>
-                                                <p class="mb-0"><i class="fa fa-check me-2"></i> Mobile App</p>
+                                                <p><i class="fa fa-check me-2"></i> Abstract</p>
+                                                <p><i class="fa fa-check me-2"></i> Download</p>
+                                                <p class="mb-0"><i class="fa fa-check me-2"></i> Cite</p>
                                             </div>
                                         </div>
                                     </div>
@@ -459,16 +459,17 @@ Conduct literature reviews and data analysis
                                                 <i class="fab fa-app-store fa-3x"></i>
                                             </div>
                                             <div class="col-xl-3">
-                                                <a href="#" class="h4 mb-0">Mobile Application</a>
+                                                <a href="#" class="h4 mb-0">Original Article</a>
                                             </div>
                                             <div class="col-xl-4">
-                                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laboriosam repudiandae
+                                                <p class="mb-0">Relationship of Emotional Intelligence with Mental Health and
+Differences based on Gender
                                                 </p>
                                             </div>
                                             <div class="col-xl-3">
-                                                <p><i class="fa fa-check me-2"></i> UI/UX Design</p>
-                                                <p><i class="fa fa-check me-2"></i> Research</p>
-                                                <p class="mb-0"><i class="fa fa-check me-2"></i> Mobile App</p>
+                                                <p><i class="fa fa-check me-2"></i> Abstract</p>
+                                                <p><i class="fa fa-check me-2"></i> Download</p>
+                                                <p class="mb-0"><i class="fa fa-check me-2"></i> Cite</p>
                                             </div>
                                         </div>
                                     </div>
@@ -489,8 +490,8 @@ Conduct literature reviews and data analysis
                     <div class="col-lg-3">
                         <div class="portfolio-header h-100 bg-dark pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
-                                <p class="text-white sub-title">Publications</p>
-                                <h1 class="display-6 text-white mb-0">My Recent Works</h1>
+                                <p class="text-white sub-title">Certifications</p>
+                                <h1 class="display-6 text-white mb-0">My Recent Achievement</h1>
                             </div>
                         </div>
                     </div>
@@ -499,9 +500,9 @@ Conduct literature reviews and data analysis
                             <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Original Articles</h4>
-                                        <h1 class="display-6 mb-0">SLEEPING PATTERNS AND ONLINE GAMING HABITS: UNRAVELLING THEIR INFLUENCE ON ANGER TOLERANCE AMONG UNIVERSITY STUDENTS</h1>
-                                        <h5>Cite: Islam, M. M., Mimi, A.., Khatun, M., Sarker, P. C., Islam, T., & Based, M.A.A (2025). Sleeping Patterns and Online Gaming Habits: Unravelling Their Influence on Anger Tolerance Among University Students: Original Research.Psych. Nurs. J., 7(1). 1-6. doi.org/ 10.53344/pnj.v7.i1.56578</h5>
+                                        <h4 class="text-body">Certifications</h4>
+                                        <h5 class="display-6 mb-0">SLEEPING PATTERNS AND ONLINE GAMING HABITS: UNRAVELLING THEIR INFLUENCE ON ANGER TOLERANCE AMONG UNIVERSITY STUDENTS</h5>
+                                        
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
@@ -522,8 +523,7 @@ Conduct literature reviews and data analysis
                                     <div class="col-xl-6">
                                         <h4 class="text-body">Review Article</h4>
                                         <h1 class="display-6 mb-0">Common mental health problems among different populations in Bangladesh– A systematic review</h1>
-                                        <h5>Cite: Mia M, Islam T, Khatun M, Zubair MBU. Common mental health problems among different populations in Bangladesh– A systematic review. Journal of Fundamentals of Mental Health 2025 Jan-Feb; 27(1): 1-11. DOI: 10.22038/JFMH.2024.82635.3169</h5>
-                                    </div>
+                                        
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
