--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="visually-hidden">Loading...</span>
             </div>
         </div>
         <!-- Spinner End -->
@@ -48,7 +48,7 @@
                 <div class="navbar-nav flex-column">
                     <a href="#pigraHome" class="nav-item nav-link active"><span class="fa fa-home"></span> Home</a>
                     <a href="#pigraAbout" class="nav-item nav-link"><span class="far fa-address-card"></span> About</a>
-                    <a href="#pigraService" class="nav-item nav-link"><span class="fab fa-servicestack"></span> Service</a>
+                    <a href="#pigraService" class="nav-item nav-link"><span class="fas fa-cogs"></span> Service</a>
                     <a href="#pigraBlog" class="nav-item nav-link"><span class="fa fa-blog"></span> Blog</a>
                     <a href="#pigraContact" class="nav-item nav-link"><span class="fas fa-address-book"></span> Contact</a>
                 </div>
@@ -66,9 +66,9 @@
                                 <h1 class="display-6 text-white mb-0">Tafajjal Islam</h1>
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
-                                <p class="text-white sub-title">PERSONAL DETAILS</p>
-Every challenge is an opportunity, a chance to grow, a lesson to learn, a part of life.
-
+                                <p class="text-white sub-title">From Soul</p>
+ <p class="text-white sub-title">Every challenge is an opportunity, a chance to grow, a lesson to learn, a part of life.
+</p>
                             </div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@ Every challenge is an opportunity, a chance to grow, a lesson to learn, a part o
                                 <div class="col-xl-5">
                                     <div class="about-img bg-light p-4 wow fadeInUp" data-wow-delay="0.1s">
                                         <img src="img/image2.jpg" class="img-fluid w-100" alt="Image">
-                                        <div class="sosial-icon">
+                                        <div class="social-icon">
                                             <a class="btn btn-primary btn-sm-square mb-3" href="https://www.facebook.com/tafazzal3212/" target="_blank">
     <i class="fab fa-facebook-f text-white"></i>
 </a>
@@ -497,9 +497,9 @@ Differences based on Gender
                             <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Workshop</h4>
-                                        <h5 class="display-6 mb-0">Suicide prevention & management</h5>
-                                    </div>
+    <h4 class="text-body">Workshop</h4>
+    <h5 class="display-6 mb-0">Suicide prevention & management</h5>
+</div>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
@@ -510,7 +510,7 @@ Differences based on Gender
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/workshop1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="Portfolio-1"><i class="fas fa-plus"></i></a>
+                                            <a href="img/workshop1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -530,7 +530,7 @@ Differences based on Gender
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/training2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                            <a href="img/training2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -550,7 +550,7 @@ Differences based on Gender
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/training1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                            <a href="img/training1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -570,7 +570,7 @@ Differences based on Gender
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/conference1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                            <a href="img/conference1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -590,7 +590,7 @@ Differences based on Gender
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/debate.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                            <a href="img/debate.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -610,7 +610,7 @@ Differences based on Gender
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/webiner1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                            <a href="img/webiner1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -630,7 +630,7 @@ Differences based on Gender
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/webiner2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                            <a href="img/webiner2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -650,7 +650,7 @@ Differences based on Gender
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/ex3.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-3"><i class="fas fa-plus"></i></a>
+                                            <a href="img/ex3.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
