--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="navbar-nav flex-column">
                     <a href="#pigraHome" class="nav-item nav-link active"><span class="fa fa-home"></span> Home</a>
                     <a href="#pigraAbout" class="nav-item nav-link"><span class="far fa-address-card"></span> About</a>
-                    <a href="#pigraService" class="nav-item nav-link"><span class="fas fa-cogs"></span> Service</a>
+                    <a href="#pigraService" class="nav-item nav-link"><span class="fa-servicestack"></span> Service</a>
                     <a href="#pigraBlog" class="nav-item nav-link"><span class="fa fa-blog"></span> Blog</a>
                     <a href="#pigraContact" class="nav-item nav-link"><span class="fas fa-address-book"></span> Contact</a>
                 </div>
@@ -66,7 +66,7 @@
                                 <h1 class="display-6 text-white mb-0">Tafajjal Islam</h1>
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
-                                <p class="text-white sub-title">From Soul</p>
+                                <p class="text-white sub-title">From Soul:</p>
  <p class="text-white sub-title">Every challenge is an opportunity, a chance to grow, a lesson to learn, a part of life.
 </p>
                             </div>
@@ -134,10 +134,8 @@
                                 <div class="col-xl-5">
                                     <div class="about-img bg-light p-4 wow fadeInUp" data-wow-delay="0.1s">
                                         <img src="img/image2.jpg" class="img-fluid w-100" alt="Image">
-                                        <div class="social-icon">
-                                            <a class="btn btn-primary btn-sm-square mb-3" href="https://www.facebook.com/tafazzal3212/" target="_blank">
-    <i class="fab fa-facebook-f text-white"></i>
-</a>
+                                        <div class="sosial-icon">
+                                            <a class="btn btn-primary btn-sm-square mb-3" href="https://www.facebook.com/tafazzal3212/" target="_blank"><i class="fab fa-facebook-f text-white"></i> </a>
 <a class="btn btn-primary btn-sm-square mb-3" href="https://x.com/TahmidH98441297" target="_blank">
     <i class="fab fa-twitter text-white"></i>
 </a>
@@ -480,7 +478,7 @@ Differences based on Gender
         <!-- Service End -->
 
 
-       <!-- Portfolio Start -->
+        <!-- Portfolio Start -->
         <div class="container-fluid">
             <div class="container">
                 <div class="row g-0">
@@ -497,19 +495,19 @@ Differences based on Gender
                             <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Workshop</h4>
-                                        <h1 class="display-6 mb-0">Suicide prevention & management</h1>
+                                        <h4 class="text-body">Web Design</h4>
+                                        <h1 class="display-6 mb-0">Software Design for ABC Corporation</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
-                                                <img src="img/workshop1.jpg.jpg" class="img-fluid" alt="Image">
+                                                <img src="img/Portfolio-1.jpg" class="img-fluid" alt="Image">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/workshop1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="Portfolio-1"><i class="fas fa-plus"></i></a>
+                                            <a href="img/Portfolio-1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="Portfolio-1"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -517,19 +515,19 @@ Differences based on Gender
                             <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Training</h4>
-                                        <h1 class="display-6 mb-0">Research Course: Basic to advance</h1>
+                                        <h4 class="text-body">Web Development</h4>
+                                        <h1 class="display-6 mb-0">Website Development for ABC Corporation</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
-                                                <img src="img/training2.jpg" class="img-fluid" alt="Image">
+                                                <img src="img/portfolio-2.jpg" class="img-fluid" alt="Image">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/training2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                            <a href="img/portfolio-2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -537,19 +535,19 @@ Differences based on Gender
                             <div class="portfolio-item py-5 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Experience</h4>
-                                        <h1 class="display-6 mb-0">Research Assistant in a project</h1>
+                                        <h4 class="text-body">Photography</h4>
+                                        <h1 class="display-6 mb-0">Security Analysis for ABC Corporation</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
-                                                <img src="img/ex3.jpg" class="img-fluid" alt="Image">
+                                                <img src="img/portfolio-3.jpg" class="img-fluid" alt="Image">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a href="img/ex3.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-3"><i class="fas fa-plus"></i></a>
+                                            <a href="img/portfolio-3.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-3"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
