--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@ Collaborated with psychiatrists and clinical psychologists.
                                             </div>
                                         </div>
                                         <h4 class="mb-3">Research Assistant at Health research Group</h4>
-                                        <p class="mb-0">Ongoing Project: Patterns of Substance Use Among Psychotic Inpatients: A Cross-Sectional Study
-Tasks:
-Survey data collection and data analysis 
-Writing manuscripts as a first author 
-Review, edit, and ensure data accuracy
+                                        <p class="mb-0"><strong>Ongoing Project:</strong> Patterns of Substance Use Among Psychotic Inpatients: A Cross-Sectional Study <br>
+<strong>Tasks:</strong>
+<p>Survey data collection and data analysis </p>
+<p>Writing manuscripts as a first author </p>
+<p>Review, edit, and ensure data accuracy</p>
 
                                         </p>
                                     </div>
@@ -285,12 +285,12 @@ Review, edit, and ensure data accuracy
                                                 <span class="fa fa-calendar me-1"></span> 2022 - 2023
                                             </div>
                                         </div>
-                                        <h4 class="mb-3">Research Assistant at Institute of Natural Resources Research and Development</h4>
+                                        <h4 class="mb-3">Research Assistant at Institute of Natural Resources Research and Development</h4><br>
                                         <p class="mb-0">
-Tasks:
-Writing manuscripts as a first author 
-Review, edit, and ensure data accuracy
-Conduct literature reviews and data analysis
+<strong>Tasks:</strong>
+<p>Writing manuscripts as a first author </p>
+<p>eview, edit, and ensure data accuracy</p>R
+<p>Conduct literature reviews and data analysis</p>
 
 
                                         </p>
@@ -481,7 +481,7 @@ Differences based on Gender
             <div class="container">
                 <div class="row g-0">
                     <div class="col-lg-3">
-                        <div class="portfolio-header h-100 bg-dark pt-6 pe-6 pb-6">
+                        <div class="portfolio-header bg-dark h-100 pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                                 <p class="text-white sub-title">Portfolio</p>
                                 <h1 class="display-6 text-white mb-0">My Recent Works</h1>
