--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@ Differences based on Gender
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-9">
+                    
+                    <div class="col-lg-9 mb-3">
                         <div class="portfolio-content h-100 pt-6 ps-6 pb-6">
                             <div class="portfolio-item py-4 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="row g-4 align-items-center">
