--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ Differences based on Gender
             <div class="container">
                 <div class="row g-0">
                     <div class="col-lg-3">
-                        <div class="portfolio-header bg-dark h-100 pt-6 pe-6 pb-6">
+                        <div class="portfolio-header h-100 pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                                 <p class="text-white sub-title">Portfolio</p>
                                 <h1 class="display-6 text-white mb-0">My Recent Works</h1>
@@ -489,7 +489,7 @@ Differences based on Gender
                         </div>
                     </div>
                     
-                    <div class="col-lg-9 mb-3">
+                    <div class="col-lg-9">
                         <div class="portfolio-content h-100 pt-6 ps-6 pb-6">
                             <div class="portfolio-item py-4 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="row g-4 align-items-center">
