--- a/index.html
+++ b/index.html
@@ -481,21 +481,20 @@ Differences based on Gender
             <div class="container">
                 <div class="row g-0">
                     <div class="col-lg-3">
-                        <div class="portfolio-header h-100 pt-6 pe-6 pb-6">
+                        <div class="portfolio-header h-100 bg-dark pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                                 <p class="text-white sub-title">Portfolio</p>
                                 <h1 class="display-6 text-white mb-0">My Recent Works</h1>
                             </div>
                         </div>
                     </div>
-                    
                     <div class="col-lg-9">
                         <div class="portfolio-content h-100 pt-6 ps-6 pb-6">
                             <div class="portfolio-item py-4 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Web Design</h4>
-                                        <h1 class="display-6 mb-0">Software Design for ABC Corporation</h1>
+                                        <h4 class="text-body">Original Article</h4>
+                                        <h1 class="display-6 mb-0">Sleep disturbance</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
@@ -514,8 +513,8 @@ Differences based on Gender
                             <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Web Development</h4>
-                                        <h1 class="display-6 mb-0">Website Development for ABC Corporation</h1>
+                                        <h4 class="text-body">Review Article</h4>
+                                        <h1 class="display-6 mb-0">Common Mental Health disorder</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
@@ -534,8 +533,8 @@ Differences based on Gender
                             <div class="portfolio-item py-5 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">Photography</h4>
-                                        <h1 class="display-6 mb-0">Security Analysis for ABC Corporation</h1>
+                                        <h4 class="text-body">Review Paper</h4>
+                                        <h1 class="display-6 mb-0">Breakfast skipping</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
